--- a/axelor-redmine/src/main/resources/views/Menu.xml
+++ b/axelor-redmine/src/main/resources/views/Menu.xml
@@ -19,9 +19,9 @@
 		parent="redmine-root" action="redmine.open.suite.sync" />
 
 	<action-view name="redmine.open.suite.sync" title="Open suite redmine sync"
-		model="com.axelor.apps.redmine.db.OpenSuitRedmineSync">
-		<view type="grid" name="redmine-open-suite-sync-grid" />
-		<view type="form" name="redmine-open-suite-sync-form" />
+		model="com.axelor.apps.redmine.db.RedmineSyncConfig">
+		<view type="grid" name="redmine-sync-config-grid" />
+		<view type="form" name="redmine-sync-config-form" />
 	</action-view>
 
 </object-views>
