--- a/axelor-redmine/src/main/resources/views/RedmineSyncConfig.xml
+++ b/axelor-redmine/src/main/resources/views/RedmineSyncConfig.xml
@@ -3,21 +3,21 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.0.xsd">
 
-	<grid model="com.axelor.apps.redmine.db.RedmineSyncConfig" title="Redmine sync config"
-		name="redmine-sync-config-grid">
+	<grid model="com.axelor.apps.redmine.db.RedmineImportConfig"
+		title="Redmine import config" name="redmine-import-config-grid">
 
 		<field name="redmineMappingFieldSelect" />
 
 	</grid>
 
-	<form model="com.axelor.apps.redmine.db.RedmineSyncConfig" title="Redmine sync config"
-		name="redmine-sync-config-form" width="large">
+	<form model="com.axelor.apps.redmine.db.RedmineImportConfig"
+		title="Redmine import config" name="redmine-import-config-form" width="large">
 
 		<panel name="mainPanel">
 			<field name="redmineMappingFieldSelect" />
 		</panel>
-		<panel-related field="redmineSyncMappingList" name="redmineSyncMappingListPanel"
-			form-view="redmine-sync-mapping-form" grid-view="redmine-sync-mapping-grid"
+		<panel-related field="redmineImportMappingList" name="redmineImportMappingListPanel"
+			form-view="redmine-import-mapping-form" grid-view="redmine-import-mapping-grid"
 			colSpan="12" />
 
 	</form>
