--- a/axelor-redmine/src/main/resources/views/RedmineSyncMapping.xml
+++ b/axelor-redmine/src/main/resources/views/RedmineSyncMapping.xml
@@ -3,16 +3,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.0.xsd">
 
-	<grid model="com.axelor.apps.redmine.db.RedmineSyncMapping" title="Redmine sync mapping"
-		name="redmine-sync-mapping-grid">
+	<grid model="com.axelor.apps.redmine.db.RedmineImportMapping"
+		title="Redmine import mapping" name="redmine-import-mapping-grid">
 
 		<field name="redmineValue" />
 		<field name="osValue" />
 
 	</grid>
 
-	<form model="com.axelor.apps.redmine.db.RedmineSyncMapping" title="Redmine sync mapping"
-		name="redmine-sync-mapping-form" width="large">
+	<form model="com.axelor.apps.redmine.db.RedmineImportMapping"
+		title="Redmine import mapping" name="redmine-import-mapping-form"
+		width="large">
 
 		<panel name="mainPanel">
 			<field name="redmineValue" />
