--- a/axelor-redmine/src/main/resources/views/Selects.xml
+++ b/axelor-redmine/src/main/resources/views/Selects.xml
@@ -10,15 +10,15 @@
 		<option value="deployment">Deployment</option>
 	</selection>
 
-	<selection name="redmine.sync.config.redmine.mapping.field.select">
+	<selection name="redmine.import.config.redmine.mapping.field.select">
 		<option value="Status">Status</option>
 		<option value="Tracker">Tracker</option>
 		<option value="Priority">Priority</option>
 	</selection>
 
 	<selection name="redmine.batch.action.select">
-		<option value="0">Sync Projects</option>
-		<option value="1">Sync Issues</option>
+		<option value="0">Import Projects</option>
+		<option value="1">Import Issues</option>
 	</selection>
 
 </object-views>
