--- a/axelor-redmine/src/main/resources/views/Menu.xml
+++ b/axelor-redmine/src/main/resources/views/Menu.xml
@@ -3,10 +3,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.0.xsd">
 
-	<menuitem name="admin-root-batch-redmine" parent="admin-root-batch"
-		title="Redmine batches" action="admin.root.batch.redmine" if="__config__.app.isApp('redmine')" />
+	<menuitem name="admin-root-batch-redmine"
+		parent="admin-root-batch" title="Redmine batches"
+		action="admin.root.batch.redmine" if="__config__.app.isApp('redmine')" />
 
-	<action-view name="admin.root.batch.redmine" title="Redmine batches"
+	<action-view name="admin.root.batch.redmine"
+		title="Redmine batches"
 		model="com.axelor.apps.redmine.db.RedmineBatch">
 		<view type="grid" name="redmine-batch-grid" />
 		<view type="form" name="redmine-batch-form" />
@@ -15,13 +17,26 @@
 	<menuitem title="Redmine" name="redmine-root"
 		if="__config__.app.isApp('redmine')" />
 
-	<menuitem title="Open suite redmine import" name="redmine-open-suite-import"
-		parent="redmine-root" action="redmine.open.suite.import" />
+	<menuitem title="Open suite redmine import"
+		name="redmine-open-suite-import" parent="redmine-root"
+		action="redmine.open.suite.import" />
 
-	<action-view name="redmine.open.suite.import" title="Open suite redmine import"
+	<action-view name="redmine.open.suite.import"
+		title="Open suite redmine import"
 		model="com.axelor.apps.redmine.db.RedmineImportConfig">
 		<view type="grid" name="redmine-import-config-grid" />
 		<view type="form" name="redmine-import-config-form" />
+	</action-view>
+
+	<menuitem title="Redmine issue transfer"
+		name="redmine-issue-transfer" parent="redmine-root"
+		action="redmine.issue.transfer" />
+
+	<action-view name="redmine.issue.transfer"
+		title="Redmine issue transfer"
+		model="com.axelor.apps.redmine.db.RedmineIssueTransfer">
+		<view type="grid" name="redmine-issue-transfer-grid" />
+		<view type="form" name="redmine-issue-transfer-form" />
 	</action-view>
 
 </object-views>
