--- a/axelor-redmine/src/main/resources/views/Selects.xml
+++ b/axelor-redmine/src/main/resources/views/Selects.xml
@@ -24,6 +24,7 @@
 	<selection name="redmine.batch.action.select">
 		<option value="0">Import Projects</option>
 		<option value="1">Import Issues</option>
+		<option value="2">Export Timesheetlines</option>
 	</selection>
 	
 	<selection name="redmine.timesheetline.activity.type.select">
