[Feature #32081] Redmine import : target mapping
- Add support to import versions with projects
- Minor technical updates in some methods

--- a/axelor-redmine/src/main/resources/views/Selects.xml
+++ b/axelor-redmine/src/main/resources/views/Selects.xml
@@ -19,6 +19,7 @@
 		<option value="Tracker">Tracker</option>
 		<option value="Priority">Priority</option>
 		<option value="Activity">Activity</option>
+		<option value="VersionStatus">Version Status</option>
 	</selection>
 
 	<selection name="redmine.batch.action.select">
